--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   http: ^1.1.0
   cached_network_image: ^3.3.1
   provider: ^6.1.2
+  flutter_bloc: ^8.1.5
+  firebase_core: ^2.24.2
+  cloud_firestore: ^4.14.0
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
